# senior-thesis

./: .gitignore  CLAUDE.md  LAGGED_IDEOLOGY_FIX.md  README.md  install_rdmc.R  pyproject.toml  requirements.txt
assets/datasets/: manifesto_to_cow_crosswalk.csv
data/: ideology_panel_country_year.csv  lag_effects_results.csv  master_country_year.csv  partiestoanallianceR&R.dta  rr_aggregates_country_year.csv
src/senior_thesis/: __init__.py  analysis.py  attrition_audit.py  audit.py  build_datasets.py  build_master.py  cli.py  config.py  data_prep.py  descriptive.py  descriptives.py  hypotheses.py  regressions.py  simple_regression.py  utils.py  visualizations.py  visualize_lag_effects.py
