[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senior-thesis"
version = "0.1.0"
description = "Senior thesis replication package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pandas",
  "numpy",
  "pyreadr",
  "statsmodels"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
build-master = "senior_thesis.build_master:main"
audit-data = "senior_thesis.audit:main"
run-analysis = "senior_thesis.analysis:main"
