[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senior-thesis"
version = "0.1.0"
description = "Senior thesis replication package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pandas",
  "numpy",
  "pyreadr",
  "statsmodels"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# Data pipeline
thesis-build = "senior_thesis.build_master:main"

# Individual analyses
thesis-describe = "senior_thesis.descriptive:main"
thesis-regress = "senior_thesis.regressions:main"
thesis-visualize = "senior_thesis.visualizations:main"

# Run all analyses
thesis-analyze = "senior_thesis.analysis:main"

# Utilities
thesis-audit = "senior_thesis.audit:main"
