[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "senior-thesis"
version = "1.0.0"
description = "Military Specialization and Alliance Institutions Study"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyreadr>=0.5",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.11",
]

[project.scripts]
thesisizer = "senior_thesis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/senior_thesis"]

[tool.uv]
dev-dependencies = []
